This file contains the version history for NFFT 3.x.x. 

Changes in version 3.1.4:
  - Fixed an error that occured when trying to create symbolic links to Matlab mex
    files during installation.
  - All programs from the application and examples subdirectories are no longer
    installed. The same holds for the Matlab code from the matlab subdirectory. 

Changes in version 3.1.3:
  - Fixed some issues that can cause C++ compilers to fail. Thanks to Romain Bossart.
  - Fixed an error that caused linking against FFTW while checking compiler 
    characteristics in the configure script. This only affected installations where 
    FFTW had been installed in a custom location.
  - Doxygen generated documentation is now only deleted if the target 
    maintainer-clean is used. The documentation is no longer deleted if the user 
    invokes the usual clean target.

Changes in version 3.1.2:
  - Fixed a bug in fpt_precompute() that caused excessive stabilization and 
    incorrect results.
  - Fixed three bugs in the nfft: window function defines are moved to the
    internal header infft.h, a larger lookup table is used for PRE_LIN_PSI, and
    nfft_adjoint for d=2,3 and PRE_FULL_PSI writes its output correctly.

Changes in version 3.1.1:
  - Added a workaround for an internal compiler error occuring with gcc 4.3.2.

Changes in version 3.1.0:
  - The FPT example program, that is, examples/fpt/simple_test has been 
    modified to not require the NFCT module anymore. This solves the problem 
    that NFFT won't compile when the FPT module has been switched on while the 
    NFCT module is swithced off.

Changes in version 3.1.0:
  - A module, called nfsoft, for fast Fourier transforms on the rotation group 
    SO(3) has been added.
  - It is now possible to configure the build process so that only specific
    modules are compiled and installed. Invoke the configure script with option
    "--help" for details.