@@ -28,7 +28,8 @@ libnfft3_la_SOURCES =
 libnfft3_la_LIBADD = 3rdparty/lib3rdparty.la util/libutil.la kernel/libkernel.la @fftw3_LIBS@ -lm
 libnfft3_la_LDFLAGS = -version-info @SHARED_VERSION_INFO@ @fftw3_LDFLAGS@
 
-EXTRA_DIST = bootstrap.sh VERSION doxygen.c
+EXTRA_DIST = bootstrap.sh VERSION doxygen.c nfft3.pc.in VERSION.in doxygen/doxygen.Doxyfile.in
+
 
 install-data-hook:
 	mkdir -p $(datadir)/nfft
