@@ -27,6 +27,11 @@
 /** Include header for FFTW3 library for its complex type. */
 #include <fftw3.h>
 
+#ifdef __cplusplus
+extern "C"
+{
+#endif /* __cplusplus */
+
 /*###########################################################################*/
 /*###########################################################################*/
 /*###########################################################################*/
@@ -362,6 +367,10 @@ int nfft_smbi(const double x, const double alpha, const int nb, const int ize,
 double nfft_lambda(const double z, const double eps);
 
 double nfft_lambda2(const double mu, const double nu);
+
+#ifdef __cplusplus
+}  /* extern "C" */
+#endif /* __cplusplus */
 
 /** @}
  */
